json en inicio para insertar las cartas de los juegos